fix: sidebar title not centered relatively to header and fix header changing size on mobile

--- a/packages/frontend/src/app/globals.css
+++ b/packages/frontend/src/app/globals.css
@@ -58,7 +58,7 @@ a {
 /*===== HEADER =====*/
 .header {
   width: 100%;
-  height: var(--header-height);
+  height: calc(var(--header-height) + 1rem);
   position: fixed;
   top: 0;
   left: 0;
@@ -97,7 +97,7 @@ a {
   width: var(--nav-width);
   height: 100vh;
   background-color: var(--first-color);
-  padding: 0.5rem 1rem 0 0;
+  padding: 0 1rem 0 0;
   transition: 0.5s;
   z-index: var(--z-fixed);
 }
@@ -116,10 +116,11 @@ a {
   grid-template-columns: max-content max-content;
   align-items: center;
   column-gap: 1rem;
-  padding: 0.5rem 0 0.5rem calc(var(--nav-width) / 2 - 13px);
+  padding: 0 0 0.5rem calc(var(--nav-width) / 2 - 13px);
 }
 
 .nav__logo {
+  height: calc(var(--header-height) + 1rem) !important;
   margin-bottom: 2rem;
 }
 
@@ -197,7 +198,6 @@ a {
 
   .l-navbar {
     left: 0;
-    padding: 1rem 1rem 0 0;
   }
 
   /*Show navbar desktop*/
